Fixing minor css alignment issue on homepage

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 .image {
   height: 500px;
   margin-top: -200px;
-  padding-left: 180px;
+  padding-left: 215px;
   transition: transform 0.5s;
 }
 
